feat: recursive depth of categories
