# src/main/kotlin/com/example/software_systems_business_logic_lab1/application/models/key_classes/CategoryKey.kt
@@ -3,12 +3,15 @@ package com.example.software_systems_business_logic_lab1.application.models.key_
 import org.springframework.data.cassandra.core.cql.PrimaryKeyType
 import org.springframework.data.cassandra.core.mapping.PrimaryKeyClass
 import org.springframework.data.cassandra.core.mapping.PrimaryKeyColumn
-import java.util.UUID
+import java.util.*
+
 
 @PrimaryKeyClass
-data class CatalogSubcatalogKey(
-    @PrimaryKeyColumn(ordinal = 0, type = PrimaryKeyType.PARTITIONED, name = "catalog_name")
-    val catalogName: String,
-    @PrimaryKeyColumn(ordinal = 1, type = PrimaryKeyType.CLUSTERED, name = "subcatalog_name")
-    val subcatalogName: String
+data class CategoryKey(
+    @PrimaryKeyColumn(name = "category_name", ordinal = 0, type = PrimaryKeyType.CLUSTERED)
+    val name: String,
+
+    @PrimaryKeyColumn(name = "category_id", ordinal = 1, type = PrimaryKeyType.PARTITIONED)
+    val id: UUID = UUID.randomUUID()
+
 )
