# src/main/resources/static/openapi.yaml
@@ -8,7 +8,7 @@ servers:
 
 paths:
 
-#Cart
+  #Cart
   /cart/get/{cartId}:
     get:
       summary: Get cart by id
@@ -108,7 +108,7 @@ paths:
         '200':
           description: Product added
 
-# OrderController
+  # OrderController
   /order/create/{cartId}:
     post:
       summary: "Create order"
@@ -136,13 +136,13 @@ paths:
         '200':
           description: "Order created successfully"
 
-# CatalogController
-  /catalog/create/{catalogName}:
+  #   CategoryController
+  /category/create/{categoryName}:
     post:
-      summary: "Create a new catalog"
-      description: "Creates a new catalog if it does not already exist"
+      summary: "Create a new category"
+      description: "Creates a new category if it does not already exist"
       parameters:
-        - name: catalogName
+        - name: categoryName
           in: path
           required: true
           schema:
@@ -150,20 +150,20 @@ paths:
             example: "clothes"
       responses:
         '200':
-          description: "Catalog created"
+          description: "Category created"
 
-  /catalog/create/{catalogName}/{subcatalogName}:
+  /category/create/{parentCategoryName}/{childCategoryName}:
     post:
-      summary: "Create a new subcatalog"
-      description: "Creates a new subcatalog under the given catalog"
+      summary: "Create a new child category"
+      description: "Creates a new child category under the specified parent category"
       parameters:
-        - name: catalogName
+        - name: parentCategoryName
           in: path
           required: true
           schema:
             type: string
             example: "clothes"
-        - name: subcatalogName
+        - name: childCategoryName
           in: path
           required: true
           schema:
@@ -171,22 +171,22 @@ paths:
             example: "shoes"
       responses:
         '200':
-          description: "Subcatalog created"
+          description: "Child category created"
 
-  /catalog/get/catalogs:
+  /category/get:
     get:
-      summary: "Get all catalogs"
-      description: "Returns a list of all catalogs"
+      summary: "Get all parents categories"
+      description: "Returns a list of all parents categories"
       responses:
         '200':
           description: "List of catalogs"
 
-  /catalog/get/catalogs/{catalogName}/subcatalogs:
+  /category/get/{categoryName}:
     get:
-      summary: "Get all subcatalogs of a catalog"
-      description: "Returns all subcatalogs under the specified catalog"
+      summary: "Get all child categories of a category"
+      description: "Returns all child categories of the specified category"
       parameters:
-        - name: catalogName
+        - name: categoryName
           in: path
           required: true
           schema:
@@ -194,12 +194,12 @@ paths:
             example: "clothes"
       responses:
         '200':
-          description: "List of subcatalogs"
+          description: "List of child categories"
 
-  /catalog/get/catalogs/{catalogName}/subcatalogs/{subcatalogName}/products:
+  /catalog/get/{categoryName}/products:
     get:
-      summary: "Get products in subcatalog"
-      description: "Returns all products in the specified subcatalog"
+      summary: "Get products in category"
+      description: "Returns all products in the specified category"
       parameters:
         - name: catalogName
           in: path
@@ -207,17 +207,11 @@ paths:
           schema:
             type: string
             example: "clothes"
-        - name: subcatalogName
-          in: path
-          required: true
-          schema:
-            type: string
-            example: "shoes"
       responses:
         '200':
           description: "List of products"
 
-# ProductController
+  # ProductController
   /product/create:
     post:
       summary: "Create a new product"
@@ -290,7 +284,7 @@ paths:
         '200':
           description: "Product stock reduced"
 
-# UserController
+  # UserController
   /user/create:
     post:
       summary: "Create a new user"
@@ -305,7 +299,7 @@ paths:
         '200':
           description: "User created"
 
-#Bank
+  #Bank
   /bank/create/bank-account:
     post:
       summary: Creates a bank account
@@ -409,45 +403,45 @@ paths:
         '200':
           description: Transaction processed
 
-#PaymentMethodController
+  #PaymentMethodController
   /payment/add/{userId}:
-      post:
-        summary: "Add a new payment method"
-        description: "Adds a payment method (e.g. card) for the specified user"
-        parameters:
-          - name: userId
-            in: path
-            required: true
-            schema:
-              type: string
-              example: "f44ae0b6-7d28-4a78-8fc6-9532d96f6ccd"
-          - name: paymentType
-            in: query
-            required: true
-            schema:
-              type: string
-              example: "CARD"
-          - name: cardNumber
-            in: query
-            required: true
-            schema:
-              type: string
-              example: "1234567890123456"
-          - name: expirationDate
-            in: query
-            required: true
-            schema:
-              type: string
-              example: "12/25"
-          - name: cvv
-            in: query
-            required: true
-            schema:
-              type: string
-              example: "123"
-        responses:
-          '200':
-            description: "Payment method added successfully"
+    post:
+      summary: "Add a new payment method"
+      description: "Adds a payment method (e.g. card) for the specified user"
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "f44ae0b6-7d28-4a78-8fc6-9532d96f6ccd"
+        - name: paymentType
+          in: query
+          required: true
+          schema:
+            type: string
+            example: "CARD"
+        - name: cardNumber
+          in: query
+          required: true
+          schema:
+            type: string
+            example: "1234567890123456"
+        - name: expirationDate
+          in: query
+          required: true
+          schema:
+            type: string
+            example: "12/25"
+        - name: cvv
+          in: query
+          required: true
+          schema:
+            type: string
+            example: "123"
+      responses:
+        '200':
+          description: "Payment method added successfully"
 
   /payment/get/all/{userId}:
     post:
@@ -464,27 +458,27 @@ paths:
         '200':
           description: "All available user payment methods"
 
-#TransactionController
+  #TransactionController
   /transaction/process/{orderId}/{paymentMethodId}:
-      post:
-        summary: "Process a payment transaction"
-        description: "Processes a payment transaction using the provided details"
-        parameters:
-          - name: orderId
-            in: path
-            required: true
-            schema:
-              type: string
-              example: "f44ae0b6-7d28-4a78-8fc6-9532d96f6ccd"
-          - name: paymentMethodId
-            in: path
-            required: true
-            schema:
-              type: string
-              example: "f44ae0b6-7d28-4a78-8fc6-9532d96f6ccd"
-        responses:
-          '200':
-            description: "Transaction processed"
+    post:
+      summary: "Process a payment transaction"
+      description: "Processes a payment transaction using the provided details"
+      parameters:
+        - name: orderId
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "f44ae0b6-7d28-4a78-8fc6-9532d96f6ccd"
+        - name: paymentMethodId
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "f44ae0b6-7d28-4a78-8fc6-9532d96f6ccd"
+      responses:
+        '200':
+          description: "Transaction processed"
 
 # Регистрируем схемы для DTO
 components:
@@ -494,24 +488,24 @@ components:
       properties:
         name:
           type: string
-          example: "Laptop"
+          example: "Zara shoes"
           description: "Name of the product"
         description:
           type: string
-          example: "High-performance laptop"
+          example: "Zara shoes Red"
           description: "Description of the product"
         price:
           type: number
-          example: 999.99
+          example: 99.9
           description: "Price of the product"
         stockQuantity:
           type: integer
           example: 10000
           description: "Stock quantity of the product"
-        subcatalogName:
+        categoryId:
           type: string
-          example: "shoes"
-          description: "Name of the subcatalog for this product"
+          example: "8ab0257e-d07d-477f-b713-45bc324e3b6e"
+          description: "Category ID of the product"
 
     UserDto:
       type: object
